--- a/examples/communication-mfe-mfe/react-microfrontend/src/App.css
+++ b/examples/communication-mfe-mfe/react-microfrontend/src/App.css
@@ -1,17 +1,13 @@
-#root {
+#communication-mfe-mfe-react {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
 }
 
-.card {
+#communication-mfe-mfe-react .card {
   padding: 2em;
   display: flex;
   flex-direction: column;
   gap: 16px;
-}
-
-.read-the-docs {
-  color: #888;
 }
