--- a/examples/communication-mfe-mfe/react-microfrontend/src/index.css
+++ b/examples/communication-mfe-mfe/react-microfrontend/src/index.css
@@ -1,41 +1,18 @@
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  background-color: white;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
+#communication-mfe-mfe-react a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
-a:hover {
+#communication-mfe-mfe-react a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
+#communication-mfe-mfe-react h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
 
-button {
+#communication-mfe-mfe-react button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -45,22 +22,10 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
+#communication-mfe-mfe-react button:hover {
   border-color: #646cff;
 }
-button:focus,
-button:focus-visible {
+#communication-mfe-mfe-react button:focus,
+#communication-mfe-mfe-react button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
