--- a/examples/communication-mfe-mfe/react-microfrontend/src/index.css
+++ b/examples/communication-mfe-mfe/react-microfrontend/src/index.css
@@ -1,18 +1,18 @@
-#communication-mfe-mfe-react a {
+communication-mfe-mfe-react a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
-#communication-mfe-mfe-react a:hover {
+communication-mfe-mfe-react a:hover {
   color: #535bf2;
 }
 
-#communication-mfe-mfe-react h1 {
+communication-mfe-mfe-react h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
 
-#communication-mfe-mfe-react button {
+communication-mfe-mfe-react button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -22,10 +22,10 @@
   cursor: pointer;
   transition: border-color 0.25s;
 }
-#communication-mfe-mfe-react button:hover {
+communication-mfe-mfe-react button:hover {
   border-color: #646cff;
 }
-#communication-mfe-mfe-react button:focus,
-#communication-mfe-mfe-react button:focus-visible {
+communication-mfe-mfe-react button:focus,
+communication-mfe-mfe-react button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
