--- a/examples/communication-mfe-iframe/react-microfrontend/src/App.css
+++ b/examples/communication-mfe-iframe/react-microfrontend/src/App.css
@@ -1,17 +1,17 @@
-#communication-mfe-iframe-react {
+communication-react-mfe {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
 }
 
-#communication-mfe-iframe-react .card {
+communication-react-mfe .card {
   padding: 2em;
   display: flex;
   flex-direction: column;
   gap: 16px;
 }
 
-#communication-mfe-iframe-react .read-the-docs {
+communication-react-mfe .read-the-docs {
   color: #888;
 }
