--- a/examples/communication-mfe-iframe/react-microfrontend/src/index.css
+++ b/examples/communication-mfe-iframe/react-microfrontend/src/index.css
@@ -1,13 +1,13 @@
-#communication-mfe-iframe-react a {
+communication-react-mfe a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
-#communication-mfe-iframe-react a:hover {
+communication-react-mfe a:hover {
   color: #535bf2;
 }
 
-#communication-mfe-iframe-react button {
+communication-react-mfe button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -17,10 +17,10 @@
   cursor: pointer;
   transition: border-color 0.25s;
 }
-#communication-mfe-iframe-react button:hover {
+communication-react-mfe button:hover {
   border-color: #646cff;
 }
-#communication-mfe-iframe-react button:focus,
+communication-react-mfe button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
