--- a/examples/mfe-import-maps/react-microfrontend/src/index.css
+++ b/examples/mfe-import-maps/react-microfrontend/src/index.css
@@ -1,18 +1,18 @@
-#root a {
+react-import-map a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
-#root a:hover {
+react-import-map a:hover {
   color: #535bf2;
 }
 
-#root h1 {
+react-import-map h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
 
-#root button {
+react-import-map button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -22,10 +22,10 @@
   cursor: pointer;
   transition: border-color 0.25s;
 }
-#root button:hover {
+react-import-map button:hover {
   border-color: #646cff;
 }
-#root button:focus,
-#root button:focus-visible {
+react-import-map button:focus,
+react-import-map button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
