--- a/examples/routing-mfe/react-microfrontend/src/index.css
+++ b/examples/routing-mfe/react-microfrontend/src/index.css
@@ -4,7 +4,9 @@
   line-height: 24px;
   font-weight: 400;
 
-  background-color: white;
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -42,6 +44,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
+  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -55,6 +58,7 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
+    color: #213547;
     background-color: #ffffff;
   }
   a:hover {
