--- a/examples/routing-mfe/svelte-microfrontend/src/app.css
+++ b/examples/routing-mfe/svelte-microfrontend/src/app.css
@@ -1,20 +1,3 @@
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
 a {
   font-weight: 500;
   color: #646cff;
@@ -41,14 +24,14 @@ h1 {
   padding: 2em;
 }
 
-#app {
+svelte-routing-mfe {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
 }
 
-button {
+svelte-routing-mfe button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -59,23 +42,10 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
+svelte-routing-mfe button:hover {
   border-color: #646cff;
 }
-button:focus,
-button:focus-visible {
+svelte-routing-mfe button:focus,
+svelte-routing-mfe button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
