--- a/examples/routing-mfe/svelte-microfrontend/src/app.css
+++ b/examples/routing-mfe/svelte-microfrontend/src/app.css
@@ -1,26 +1,18 @@
-a {
+svelte-routing-mfe a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
-a:hover {
+svelte-routing-mfe a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
+svelte-routing-mfe h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
 
-.card {
+svelte-routing-mfe .card {
   padding: 2em;
 }
 
