--- a/examples/all-templates/react/src/App.css
+++ b/examples/all-templates/react/src/App.css
@@ -5,15 +5,15 @@ react-mfe-typescript {
   text-align: center;
 }
 
-.logo {
+react-mfe-typescript .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
 }
-.logo:hover {
+react-mfe-typescript .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
-.logo.react:hover {
+react-mfe-typescript .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
@@ -32,10 +32,10 @@ react-mfe-typescript {
   }
 }
 
-.card {
+react-mfe-typescript .card {
   padding: 2em;
 }
 
-.read-the-docs {
+react-mfe-typescript .read-the-docs {
   color: #888;
 }
