--- a/examples/all-templates/solid/src/App.module.css
+++ b/examples/all-templates/solid/src/App.module.css
@@ -1,14 +1,14 @@
-.App {
+solid-mfe-typescript .App {
   text-align: center;
 }
 
-.logo {
+solid-mfe-typescript .logo {
   animation: logo-spin infinite 20s linear;
   height: 40vmin;
   pointer-events: none;
 }
 
-.header {
+solid-mfe-typescript .header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -19,7 +19,7 @@
   color: white;
 }
 
-.link {
+solid-mfe-typescript .link {
   color: #b318f0;
 }
 
