--- a/examples/all-templates/svelte/src/app.css
+++ b/examples/all-templates/svelte/src/app.css
@@ -1,30 +1,13 @@
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
+svelte-mfe-typescript a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
-a:hover {
+svelte-mfe-typescript a:hover {
   color: #535bf2;
 }
 
-body {
+svelte-mfe-typescript body {
   margin: 0;
   display: flex;
   place-items: center;
@@ -32,12 +15,12 @@ body {
   min-height: 100vh;
 }
 
-h1 {
+svelte-mfe-typescript h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
 
-.card {
+svelte-mfe-typescript .card {
   padding: 2em;
 }
 
@@ -48,7 +31,7 @@ svelte-mfe-typescript {
   text-align: center;
 }
 
-button {
+svelte-mfe-typescript button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -59,23 +42,10 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
+svelte-mfe-typescript button:hover {
   border-color: #646cff;
 }
-button:focus,
-button:focus-visible {
+svelte-mfe-typescript button:focus,
+svelte-mfe-typescript button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
