--- a/examples/all-templates/solid/src/index.css
+++ b/examples/all-templates/solid/src/index.css
@@ -10,4 +10,5 @@ solid-mfe-typescript body {
 solid-mfe-typescript code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+  background-color: unset;
 }
